glabble blabble lots of changes for auto layout, blah blah blah